name:                astro-app
version:             0.1.0.0
synopsis:            Amateur astronomical computations
description:         Please see README.md
homepage:            https://github.com/alexander-ignatyev/astro
license:             BSD3
license-file:        LICENSE
author:              Alexander Ignatyev
maintainer:          Alexander Ignatyev
copyright:           2016-2017 Alexander Ignatyev
category:            Science
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable astro-app
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , time
                     , aeson
                     , optparse-applicative
                     , astro
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexander-ignatyev/astro
